# OpenX

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  restart-openx.bat
.codex/: config.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: desktop-commands.toml
apps/desktop/src-tauri/src/: desktop_prefs.rs  lib.rs  main.rs  tray_icon.rs
docs/: OXSP-TEST-PLAN.md  architecture-baseline.md  chat-stream-upgrade-plan.md  foreman-roadmap.md  miloco-openx-integration.md  openx-foundation-survey.html  openx-product-core.md  openx-stage-design.html  openx-ui-design-spec.md  openx-ui-mockup.html  openx-vendors-catalog.html  pin-desktop-interaction-spec.md  roundtable-interaction-test-cases.md  roundtable-route-semantics-autogen.md  roundtable-ux-gap-sillytavern-librechat.md
reports/: suzhou-zhongkao-volunteer-analysis.html
scripts/: cleanup-test-workspace.mjs  coach-deepseek-bootstrap.mjs  dispatch-cc-ping.mjs  e2e-acp-complex-tasks.mjs  e2e-acp-dispatch.mjs  e2e-acp-run.mjs  e2e-cli-full-flow.mjs  e2e-connect-auto.mjs  e2e-crew-game.mjs  e2e-island-ui-flow.mjs  e2e-miloco-integration.mjs  e2e-miloco-live.mjs  e2e-self-bootstrap.mjs  fetch-vendor-zvec.mjs  install-miloco-skills.mjs  miloco-batch2-smoke.mjs  miloco-batch3-cron-smoke.mjs  miloco-batch3-smoke.mjs  miloco-connect-wsl.ps1  miloco-create-task-smoke.mjs  miloco-goal-examples.md  miloco-habit-suggest-smoke.mjs  (+24 more)
(+525 files in other folders)
