[package]
name = "openx-desktop"
version = "0.1.0"
description = "OpenX Desktop Application"
authors = ["OpenX"]
edition = "2021"

[lib]
name = "openx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
image = { version = "0.25", default-features = false, features = ["png"] }
